make a few optimisations
~0.03% server use with 100 entities with accessories equipped from ~0.15-0.20%